[gd_scene load_steps=19 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://milky_coffee/Milky Coffee.otf" type="DynamicFontData" id=2]
[ext_resource path="res://milky_coffee/Milky Coffee.ttf" type="DynamicFontData" id=3]

[sub_resource type="Theme" id=14]

[sub_resource type="DynamicFont" id=1]
size = 35
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=15]

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=11]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 25
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
size = 25
font_data = ExtResource( 2 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 14 )
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 5.0
margin_right = -10.0
margin_bottom = -5.0

[node name="AddEventButton" type="Button" parent="VBoxContainer"]
margin_right = 700.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 1 )
text = "Add Event"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 700.0
margin_bottom = 248.0
rect_min_size = Vector2( 700, 200 )
columns = 6

[node name="NameLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 100.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
theme = SubResource( 15 )
custom_fonts/font = SubResource( 2 )
text = "Name"
align = 1
valign = 1

[node name="NameTextEdit" type="TextEdit" parent="VBoxContainer/GridContainer"]
margin_left = 104.0
margin_right = 219.0
margin_bottom = 80.0
rect_min_size = Vector2( 115, 80 )
custom_fonts/font = SubResource( 3 )

[node name="YearLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 223.0
margin_right = 323.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = SubResource( 4 )
text = "Year"
align = 1
valign = 1

[node name="YearTextEdit" type="TextEdit" parent="VBoxContainer/GridContainer"]
margin_left = 327.0
margin_right = 442.0
margin_bottom = 80.0
rect_min_size = Vector2( 115, 80 )
custom_fonts/font = SubResource( 5 )

[node name="MonthLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 446.0
margin_right = 546.0
margin_bottom = 80.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = SubResource( 6 )
text = "Month"
align = 1
valign = 1

[node name="MonthTextEdit" type="TextEdit" parent="VBoxContainer/GridContainer"]
margin_left = 550.0
margin_right = 665.0
margin_bottom = 80.0
rect_min_size = Vector2( 115, 80 )
custom_fonts/font = SubResource( 7 )

[node name="DayLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 84.0
margin_right = 100.0
margin_bottom = 164.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = SubResource( 8 )
text = "Day"
align = 1
valign = 1

[node name="DayTextEdit" type="TextEdit" parent="VBoxContainer/GridContainer"]
margin_left = 104.0
margin_top = 84.0
margin_right = 219.0
margin_bottom = 164.0
rect_min_size = Vector2( 115, 80 )
custom_fonts/font = SubResource( 9 )

[node name="HourLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 223.0
margin_top = 84.0
margin_right = 323.0
margin_bottom = 164.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = SubResource( 10 )
text = "Hour"
align = 1
valign = 1

[node name="HourTextEdit" type="TextEdit" parent="VBoxContainer/GridContainer"]
margin_left = 327.0
margin_top = 84.0
margin_right = 442.0
margin_bottom = 164.0
rect_min_size = Vector2( 115, 80 )
custom_fonts/font = SubResource( 11 )

[node name="MinuteLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_left = 446.0
margin_top = 84.0
margin_right = 546.0
margin_bottom = 164.0
rect_min_size = Vector2( 100, 80 )
custom_fonts/font = SubResource( 12 )
text = "Minute"
align = 1
valign = 1

[node name="MinuteTextEdit" type="TextEdit" parent="VBoxContainer/GridContainer"]
margin_left = 550.0
margin_top = 84.0
margin_right = 665.0
margin_bottom = 164.0
rect_min_size = Vector2( 115, 80 )
custom_fonts/font = SubResource( 13 )

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
modulate = Color( 0.917647, 0.0352941, 0.0352941, 1 )
self_modulate = Color( 0.0588235, 0.941176, 0.0784314, 1 )
margin_top = 252.0
margin_right = 700.0
margin_bottom = 256.0

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_top = 260.0
margin_right = 700.0
margin_bottom = 1260.0
rect_min_size = Vector2( 700, 1000 )

[connection signal="pressed" from="VBoxContainer/AddEventButton" to="." method="_on_AddEventButton_pressed"]
